# construct-server

./: .env.example  .env.local.example  .env.test.example  AGENTS.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  MLS_CHANNELS_ROADMAP.md  README.md  TRADEMARK.md  supervisord.conf
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
auth-service/: Cargo.toml
auth-service/src/: main.rs
channel-service/src/: helpers.rs  main.rs  service.rs
channel-service/src/handlers/: admin.rs  channel_lifecycle.rs  comment_groups.rs  invite_links.rs  mod.rs  posts.rs  subscriptions.rs
channel-service/src/tests/: admin.rs  channel_lifecycle.rs  comment_groups.rs  invite_links.rs  mod.rs  posts.rs  subscriptions.rs  test_helpers.rs
crates/construct-apns/: Cargo.toml
crates/construct-apns/src/: client.rs  encryption.rs  types.rs
crates/construct-audit/: Cargo.toml
crates/construct-auth/: Cargo.toml
crates/construct-auth-service/: Cargo.toml
crates/construct-auth-service/src/: context.rs  core.rs  devices.rs
crates/construct-auth/src/: auth_tests.rs  lib.rs
crates/construct-config/: Cargo.toml
crates/construct-config/src/: database.rs  federation.rs  lib.rs  messaging.rs  redis.rs  secret_hygiene.rs
crates/construct-context/: Cargo.toml
crates/construct-context/src/: lib.rs  traits.rs
crates/construct-crypto/: Cargo.toml
crates/construct-crypto/src/: e2e.rs  lib.rs  privacy_pass.rs
crates/construct-crypto/src/pqc/: hybrid.rs  mod.rs  types.rs
crates/construct-db/: Cargo.toml
crates/construct-db/src/: channel.rs  lib.rs  mls.rs
crates/construct-delivery-ack/: Cargo.toml
crates/construct-delivery-ack/src/: batching.rs  lib.rs  security_tests.rs  storage.rs
crates/construct-error/: Cargo.toml
crates/construct-error/src/: lib.rs
crates/construct-extractors/: Cargo.toml
crates/construct-federation/: Cargo.toml
crates/construct-federation/src/: client.rs  mtls.rs
crates/construct-federation/tests/: s2s_sealed_sender_blind_test.rs
crates/construct-message/: Cargo.toml
crates/construct-message/src/: consumer.rs  lib.rs  producer.rs  types.rs
crates/construct-metrics/src/: lib.rs
crates/construct-notification-service/: Cargo.toml
crates/construct-notification-service/src/: context.rs  notifications.rs
crates/construct-pending/: Cargo.toml
crates/construct-pending/src/: storage.rs  types.rs
crates/construct-pow/: Cargo.toml
crates/construct-queue/: Cargo.toml
crates/construct-queue/src/: delivery.rs  lib.rs  pow.rs  tests.rs
crates/construct-rate-limit/: Cargo.toml
crates/construct-rate-limit/src/: lib.rs
crates/construct-redis/: Cargo.toml
crates/construct-redis/src/: delivery.rs  streams.rs
crates/construct-sentinel-service/: Cargo.toml
crates/construct-sentinel-service/src/: core.rs  lib.rs
crates/construct-types/: Cargo.toml
crates/construct-user-service/: Cargo.toml
crates/construct-utils/: Cargo.toml
crates/construct-utils/src/: lib.rs  net.rs
crates/crypto-agility/: Cargo.toml
gateway/: Cargo.toml
gateway/src/: main.rs
group-service/: Cargo.toml
group-service/src/: cleanup.rs  helpers.rs  main.rs  metrics.rs  service.rs
group-service/src/handlers/: admin.rs  channel_admin.rs  channel_invite_links.rs  channel_lifecycle.rs  comment_groups.rs  group_lifecycle.rs  key_packages.rs  membership.rs  messaging.rs  mls_sync.rs  mod.rs  posts.rs  subscriptions.rs  topics.rs
group-service/src/tests/: admin.rs  channel_admin.rs  channel_lifecycle.rs  comment_groups.rs  group_lifecycle.rs  invite_links.rs  key_packages.rs  membership.rs  messaging.rs  mls_sync.rs  mod.rs  posts.rs  subscriptions.rs  test_helpers.rs  topics.rs
identity-service/: Cargo.toml
identity-service/src/: context.rs  invite_core.rs  main.rs  recovery.rs
invite-service/src/: main.rs
key-service/: Cargo.toml
key-service/src/: core.rs  kt.rs  main.rs
masque-service/: Cargo.toml
masque-service/src/: handler.rs  main.rs
media-service/: Cargo.toml
messaging-service/: Cargo.toml
messaging-service/src/: context.rs  core.rs  envelope.rs  federation.rs  grpc.rs  handlers.rs  main.rs  notification_core.rs  notification_grpc.rs  receipts.rs  spent_tag.rs  stream.rs  token_redeem.rs
messaging-service/src/sentinel/: grpc.rs  mod.rs
mls-service/src/: main.rs  service.rs
notification-service/src/: core.rs  main.rs
ops/: .env.data.example  .env.example  .env.lite.example  Caddyfile  Caddyfile.island  Caddyfile.relay  Dockerfile  Dockerfile.caddy  docker-compose.data.yml  docker-compose.lite.yml  docker-compose.prod.yml  docker-compose.relay.yml  docker-compose.smoke.yml  envoy.docker.yaml  island.env.example  prometheus.yml  relay.env.example  secrets.example.env  secrets.relay.example.env
ops/federation-smoke/: README.md  run.sh  sender-blind-check.sh
ops/prometheus/: prometheus.yml
ops/veil-mdns-sidecar/: Dockerfile  README.md  veil-mdns-advertise.sh  veil-mdns.service
scripts/: README.md  preflight-secrets.sh  test-federation.py
shared/: Cargo.toml  build.rs
shared/migrations/: 052_contact_request_identity_snapshot.sql  053_hybrid_pq_identity.sql  054_kt_hybrid_leaf.sql  055_veil_tickets.sql  056_veil_capabilities_v2.sql  057_drop_encrypted_data_registry.sql  058_drop_pow_challenges.sql  059_drop_key_management.sql  060_drop_rate_limit_events.sql  061_retention_days_limits.sql  062_drop_channel_triggers.sql  063_supports_pq_ratchet.sql  064_identity_public_key.sql
shared/src/: construct_server.rs  lib.rs
shared/src/clients/: mls.rs  (+1 more)
shared/tests/: delivery_ack_test.rs  microservices_smoke_test.rs  next_since_contract_test.rs  notification_service_test.rs  queue_test.rs  rest_api_health_test.rs  test_utils.rs
signaling-service/: Cargo.toml
signaling-service/src/: main.rs  rate_limiter.rs  registry.rs  service.rs
tools/: .gitignore  manifest.json  relays.json  sign_relay_manifest.py
tools/.well-known/: construct-server
user-service/: Cargo.toml
user-service/src/: invite_core.rs  main.rs
veil-service/: Cargo.toml
veil-service/src/: core.rs  main.rs
(+34 files in other folders)
