[workspace]
resolver = "2"

members = [
    "shared",
    "messaging-service",
    "identity-service",
    "gateway",
    "media-service",
    "key-service",
    "group-service",
    "signaling-service",
    "veil-service",

    # modular crates
    "crates/construct-types",
    "crates/construct-error",
    "crates/construct-crypto",
    "crates/construct-db",
    "crates/construct-redis",
    "crates/construct-config",
    "crates/construct-message",
    "crates/construct-queue",
    "crates/construct-auth",
    "crates/construct-auth-service",
    "crates/construct-notification-service",
    "crates/construct-sentinel-service",
    "crates/construct-apns",
    "crates/crypto-agility",
    "crates/construct-metrics",

    # infrastructure crates
    "crates/construct-utils",
    "crates/construct-audit",
    "crates/construct-rate-limit",
    "crates/construct-pow",
    "crates/construct-federation",
    "crates/construct-delivery-ack",
    "crates/construct-pending",
    "crates/construct-context",
    "crates/construct-extractors",
    "crates/construct-user-service",
]

# One version for all packages
[workspace.package]
version = "0.16.25"
edition = "2024"
authors = ["Construct Team"]
repository = "https://github.com/konstruct-msg/construct-server"
license = "AGPL-3.0-only"

[workspace.dependencies]
# Common dependencies for all services
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "migrate",
] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }

# HTTP
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.13.4", features = ["json"] }

# Auth
jsonwebtoken = "10"
bcrypt = "0.16"
base64 = "0.22"

# Crypto
hex = "0.4"
zeroize = "1.8"

# Metrics
prometheus = { version = "0.14", features = ["process"] }
once_cell = "1.21"
