[package]
name = "auth-service"
version.workspace = true
edition.workspace = true

[dependencies]
construct-config = { path = "../crates/construct-config" }
construct-server-shared = { path = "../shared" }
construct-crypto = { path = "../crates/construct-crypto" }

# Workspace deps
tokio = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenvy = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
async-trait = {workspace = true}
sqlx = {workspace = true}
redis = {workspace = true}
axum = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}

jsonwebtoken = {workspace = true}
bcrypt = {workspace = true}
base64 = {workspace = true}
hex = {workspace = true}
zeroize = {workspace = true}
prometheus = {workspace = true}
tonic = "0.14.2"
prost = "0.14.3"

construct-error = { path = "../crates/construct-error" }
construct-extractors = { path = "../crates/construct-extractors" }
construct-db = { path = "../crates/construct-db" }
tokio-stream = "0.1"
# Auth specific
rand = "0.10"
hkdf = "0.13"
hmac = "0.13"
sha2 = "0.11"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
subtle = "2.6"

# ICE transport — bridge cert computation for login response
construct-veil = { git = "https://github.com/konstruct-msg/construct-veil.git", branch = "main" }

# RSA key parsing for JWKS endpoint
rsa = { version = "0.9", features = ["pem"] }
curve25519-dalek = { version = "4", features = ["digest", "rand_core"] }
# Ed25519 PEM parsing for /.well-known/construct-server paseto_public_key field
ed25519-compact = { version = "2.0", features = ["pem"] }

[dev-dependencies]
reqwest = { workspace = true }
