[package]
name = "group-service"
version = "0.1.0"
edition = "2021"
description = "Group Service for Construct Messenger — MLS groups (RFC 9420) + Broadcast Channels"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"

tonic = "0.14"
prost = "0.14"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = "0.8"
serde_json = "1"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

futures-util = "0.3"
tokio-stream = "0.1"

prometheus = "0.14"
lazy_static = "1.4"

redis = { workspace = true }

construct-server-shared = { path = "../shared" }
construct-db = { path = "../crates/construct-db" }
construct-config = { path = "../crates/construct-config" }
construct-auth = { path = "../crates/construct-auth" }
construct-rate-limit = { path = "../crates/construct-rate-limit" }
construct-metrics = { path = "../crates/construct-metrics" }

[[bin]]
name = "group-service"
path = "src/main.rs"
