[package]
name = "identity-service"
license = "AGPL-3.0-only"
version.workspace = true
edition.workspace = true

[[bin]]
name = "identity-service"
path = "src/main.rs"

[dependencies]
construct-config = { path = "../crates/construct-config" }
construct-server-shared = { path = "../shared" }
construct-crypto = { path = "../crates/construct-crypto" }
construct-db = { path = "../crates/construct-db" }
construct-error = { path = "../crates/construct-error" }
construct-extractors = { path = "../crates/construct-extractors" }
crypto-agility = { path = "../crates/crypto-agility" }

tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
prometheus = { workspace = true }

tonic = "0.14.2"
prost = "0.14.3"
tokio-stream = "0.1"
rand = "0.10"
hkdf = "0.13"
sha2 = "0.11"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
curve25519-dalek = { version = "4", features = ["digest", "rand_core"] }
ed25519-compact = { version = "2.0", features = ["pem"] }
rsa = { version = "0.9", features = ["pem"] }

construct-veil = { git = "https://github.com/konstruct-msg/construct-veil.git", branch = "main" }
