[package]
name = "masque-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "MASQUE-lite UDP relay — tunnels QUIC datagrams over WebSocket/TLS for iOS clients"

[[bin]]
name = "masque-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = "1"
