[package]
name = "messaging-service"
version.workspace = true
edition.workspace = true

[dependencies]
construct-config = { path = "../crates/construct-config" }
construct-server-shared = { path = "../shared" }
construct-apns = { path = "../crates/construct-apns" }
construct-auth = { path = "../crates/construct-auth" }
construct-message = { path = "../crates/construct-message" }
construct-context = { path = "../crates/construct-context" }
construct-db = { path = "../crates/construct-db" }
construct-federation = { path = "../crates/construct-federation" }
construct-queue = { path = "../crates/construct-queue" }
construct-utils = { path = "../crates/construct-utils" }
construct-crypto = { path = "../crates/construct-crypto" }
construct-extractors = { path = "../crates/construct-extractors" }
construct-error = { path = "../crates/construct-error" }
construct-types = { path = "../crates/construct-types" }

tokio = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenvy = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
async-trait = {workspace = true}
sqlx = {workspace = true}
redis = {workspace = true}
axum = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
jsonwebtoken = {workspace = true}
bcrypt = {workspace = true}
base64 = {workspace = true}
hex = {workspace = true}
zeroize = {workspace = true}
prometheus = {workspace = true}
construct-metrics = { path = "../crates/construct-metrics" }
construct-rate-limit = { path = "../crates/construct-rate-limit" }
tonic = "0.14.2"
prost = "0.14.3"
futures-core = "0.3"
tokio-stream = "0.1"

# Messaging specific
serde_bytes = "0.11"
rmp-serde = "1.3"
hmac = "0.13"
rand = "0.10"
sha2 = "0.11"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[dev-dependencies]
reqwest = { workspace = true }
serial_test = "3"
tokio = { workspace = true }
uuid = { workspace = true }
curve25519-dalek = { version = "4", features = ["digest", "rand_core"] }
chacha20poly1305 = "0.10"
hkdf = "0.13"
sha2-dalek-compat = { package = "sha2", version = "0.10" }

[features]
integration_tests = []
