[package]
name = "veil-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "veil-service"
path = "src/main.rs"

[dependencies]
construct-config = { path = "../crates/construct-config" }
construct-server-shared = { path = "../shared" }

# Workspace deps
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
hex = { workspace = true }
tonic = "0.14.2"

# Capability signing (Ed25519) + CSPRNG for ticket material.
# The signing message + blob layout MUST match construct-veil-protocol::capability.
ed25519-dalek = "2"
getrandom = "0.2"
