[package]
name = "construct-crypto"
version = "0.6.0"
edition = "2021"
authors = ["Construct Server Team"]
description = "Cryptographic primitives for Construct secure messaging server"
license = "AGPL-3.0-only"

[features]
default = ["full"]
full = ["e2ee", "delivery-ack", "pqc"]
e2ee = []           # End-to-end encryption (Signal Protocol)
delivery-ack = []   # Privacy-preserving delivery acknowledgments
pqc = ["post-quantum"]  # Post-quantum cryptography
post-quantum = [
    "dep:ml-dsa",
    "dep:rand_core",
]

[dependencies]
# Core crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = { version = "4", features = ["digest", "rand_core"] }
chacha20poly1305 = "0.10"
sha2 = "0.11"
# curve25519-dalek's `RistrettoPoint::from_hash` needs `digest` 0.10's `Digest` trait,
# which sha2 0.11 (used elsewhere in this crate) no longer implements. Pin a second,
# renamed sha2 dependency at 0.10 (same version construct-core uses) just for that call.
sha2-dalek-compat = { package = "sha2", version = "0.10" }
hkdf = "0.13"
hmac = "0.13"
subtle = "2.6"

# Encoding
base64 = "0.22"
hex = "0.4"

# Post-quantum cryptography (ML-DSA-65 for hybrid signatures)
# RustCrypto `ml-dsa` (maintained) — replaced the archived PQClean-based
# pqcrypto-mldsa/pqcrypto-traits crates (RUSTSEC-2026-0162/0166).
ml-dsa = { version = "0.1.1", optional = true }
rand_core = { version = "0.6", optional = true, features = ["getrandom"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
prost = "0.14"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["sync"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
