[package]
name = "construct-redis"
version = "0.5.11"
edition = "2021"
authors = ["Construct Server Team"]
description = "Redis utilities for Construct secure messaging server"
license = "AGPL-3.0-only"

[dependencies]
# Redis with streams support
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "streams", "tokio-native-tls-comp"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

