[package]
name = "construct-sentinel-service"
license = "AGPL-3.0-only"
version.workspace = true
edition.workspace = true

[dependencies]
# Core runtime
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

# Database / Redis
sqlx        = { workspace = true }
redis       = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
# Unit tests for TrustLevel thresholds only — no DB/Redis required.